# src/gs-api/src/models.ts
@@ -10,6 +10,7 @@ export { CategoryDto } from './models/category-dto';
 export { ClientCriteria } from './models/client-criteria';
 export { ClientDto } from './models/client-dto';
 export { CommandeClientDto } from './models/commande-client-dto';
+export { CommandeClientUpdate } from './models/commande-client-update';
 export { CommandeFournisseurDto } from './models/commande-fournisseur-dto';
 export { EntrepriseDto } from './models/entreprise-dto';
 export { FournisseurCriteria } from './models/fournisseur-criteria';
@@ -17,6 +18,7 @@ export { FournisseurDto } from './models/fournisseur-dto';
 export { LigneCommandeClientDto } from './models/ligne-commande-client-dto';
 export { LigneCommandeFournisseurDto } from './models/ligne-commande-fournisseur-dto';
 export { LigneVenteDto } from './models/ligne-vente-dto';
+export { MvtStockCriteria } from './models/mvt-stock-criteria';
 export { MvtStockDto } from './models/mvt-stock-dto';
 export { RolesDto } from './models/roles-dto';
 export { UtilisateurCriteria } from './models/utilisateur-criteria';
