# src/gs-api/src/models/mvt-stock-criteria.ts
@@ -1,0 +1,7 @@
+/* tslint:disable */
+import { Article } from './article';
+export interface MvtStockCriteria {
+  article?: Article;
+  dateEnregistrement?: string;
+  nombreDeResultat?: string;
+}
