# src/gs-api/src/services/mvtstock-api.service.ts
@@ -8,6 +8,7 @@ import { Observable as __Observable } from 'rxjs';
 import { map as __map, filter as __filter } from 'rxjs/operators';
 
 import { MvtStockDto } from '../models/mvt-stock-dto';
+import { MvtStockCriteria } from '../models/mvt-stock-criteria';
 @Injectable({
   providedIn: 'root',
 })
@@ -15,6 +16,7 @@ class MvtstockApiService extends __BaseService {
   static readonly findAllPath = '/gestiondestock_backend/v1/mvtStock/all';
   static readonly savePath = '/gestiondestock_backend/v1/mvtStock/create';
   static readonly deletePath = '/gestiondestock_backend/v1/mvtStock/delete/{idMvtStock}';
+  static readonly listingMvtStockPath = '/gestiondestock_backend/v1/mvtStock/mvtStock/listingMvtStock';
   static readonly findByIdPath = '/gestiondestock_backend/v1/mvtStock/{idMvtStock}';
 
   constructor(
@@ -124,6 +126,42 @@ class MvtstockApiService extends __BaseService {
   delete(idMvtStock: number): __Observable<null> {
     return this.deleteResponse(idMvtStock).pipe(
       __map(_r => _r.body as null)
+    );
+  }
+
+  /**
+   * @param body undefined
+   * @return successful operation
+   */
+  listingMvtStockResponse(body?: MvtStockCriteria): __Observable<__StrictHttpResponse<Array<MvtStockDto>>> {
+    let __params = this.newParams();
+    let __headers = new HttpHeaders();
+    let __body: any = null;
+    __body = body;
+    let req = new HttpRequest<any>(
+      'POST',
+      this.rootUrl + `/gestiondestock_backend/v1/mvtStock/mvtStock/listingMvtStock`,
+      __body,
+      {
+        headers: __headers,
+        params: __params,
+        responseType: 'json'
+      });
+
+    return this.http.request<any>(req).pipe(
+      __filter(_r => _r instanceof HttpResponse),
+      __map((_r) => {
+        return _r as __StrictHttpResponse<Array<MvtStockDto>>;
+      })
+    );
+  }
+  /**
+   * @param body undefined
+   * @return successful operation
+   */
+  listingMvtStock(body?: MvtStockCriteria): __Observable<Array<MvtStockDto>> {
+    return this.listingMvtStockResponse(body).pipe(
+      __map(_r => _r.body as Array<MvtStockDto>)
     );
   }
 
